Updates to table size and styles for colour

--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -15,3 +15,72 @@ body {
 .sbdocs.sbdocs-content {
   max-width: core-global.$screen-xl;
 }
+
+/* UQDS Table Styles */ 
+
+/* Table large screen (large screen first as this is default table behaviour */ 
+.uqds-table {
+  width:100%;
+  border: none;
+  border-collapse:collapse;
+}
+.uqds-table .uqds-table__mobile-heading {
+  border:none;
+}
+.uqds-table .uqds-table__heading {
+  font-weight:500;
+  text-align:left;
+  color:#51247a;
+  background-color:#f1f1f1;
+  border:none; /* override storybook default */
+  border-bottom:1px solid #e2e2e2;
+  padding:1rem;
+  vertical-align:top;
+ }
+ .uqds-table .uqds-table__item {
+  padding:1rem;
+  border: none;
+  border-bottom:1px solid #e2e2e2;
+  vertical-align:top;
+ }
+ .uqds-table .uqds-table__row:nth-of-type(2n) {
+   background-color: #fff;   /* override storybook default */
+ }
+
+ @media (max-width:800px) {
+
+ /* Table card */ 
+ .uqds-table--card .uqds-table__body {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
+  column-gap: 32px;
+  row-gap: 32px;
+}
+.uqds-table--card .uqds-table__mobile-heading, .uqds-table--card .uqds-table__heading {
+  display:none;
+}
+/* table content */
+.uqds-table--card .uqds-table__row  {
+  display: grid;
+  align-items: stretch;
+  grid-template-columns: 1fr;
+  row-gap: 8px;
+  border:none; /* override storybook default */
+  border: 1px solid #f1f1f1;
+  border-radius: .25rem;
+  box-shadow: 0 .25rem .5rem rgba(24,24,24,.05);
+  padding: 1rem;
+}
+.uqds-table--card .uqds-table__item, .uqds-table--card .uqds-table__heading {
+  border: none;
+  padding: 0;
+}
+/* colour styles */
+.uqds-table--card .uqds-table__item:before {
+  content: attr(data-title);
+  display: block;
+  color:rgb(111, 111, 111);
+  font-size: 0.875rem;
+}
+
+ }
