--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -81,7 +81,7 @@ $alert: $uq-red-dark20; //B80017;
 $info-color: #d4f0ff !default; //#D4F0FF !default;
 $success-color: #d5eeca !default; //#D5EECA!default;
 $warning-color: #ffe0ad !default; //#FFE0AD!default;
-$danger-color: #Ffacac !default; //#F4ACAC!default;
+$danger-color: #ffacac !default; //#F4ACAC!default;
 
 // Vertical lists
 $vertical-list-border: $uq-neutral-light40; //EDEDED;
