--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -14,6 +14,10 @@ body {
 
 .sbdocs.sbdocs-content {
   max-width: core-global.$screen-xl;
+
+  @media only screen and (min-width: #{core-global.$screen-md + 16.5rem}) {
+    margin-right: 14rem;
+  }
 }
 
 /* UQDS Table Styles */ 
