--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -12,12 +12,14 @@ body {
   background-color: transparent !important;
 }
 
+.sbdocs.sbdocs-wrapper {
+  @media only screen and (min-width: #{core-global.$screen-md + 16.5rem}) {
+    padding-right: 14rem;
+  }
+}
+
 .sbdocs.sbdocs-content {
   max-width: core-global.$screen-xl;
-
-  @media only screen and (min-width: #{core-global.$screen-md + 16.5rem}) {
-    margin-right: 14rem;
-  }
 }
 
 /* UQDS Table Styles */ 
