"aria-label" added to both nav

--- a/packages/storybook-html/src/components/site-header/site-header.html
+++ b/packages/storybook-html/src/components/site-header/site-header.html
@@ -13,7 +13,7 @@
 
   <!-- Navigation Menu  -->
   <div class="uq-site-header__navigation-container">
-    <nav class="uq-site-header__navigation" id="jsNav">
+    <nav class="uq-site-header__navigation" aria-label="Main navigation" id="jsNav">
       <ul class="uq-site-header__navigation__list
                  uq-site-header__navigation__list--level-1">
         <li class="uq-site-header__navigation__list-item
@@ -115,13 +115,13 @@
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/events" aria-haspopup="false" aria-expanded="false">Events</a>
+          <a href="/events" aria-expanded="false">Events</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/stories" aria-haspopup="false" aria-expanded="false">Stories</a>
+          <a href="/stories" aria-expanded="false">Stories</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/contact-us" aria-haspopup="false" aria-expanded="false">Contact</a>
+          <a href="/contact-us" aria-expanded="false">Contact</a>
         </li>
       </ul>
     </nav>
