--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -5,7 +5,7 @@
                 <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
                 <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
             </div>
-            <nav class="menu-global">
+            <nav class="menu-global" aria-label="Global navigation">
                 <ul>
                     <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
                     <li><a href="https://future-students.uq.edu.au/">Study</a></li>
@@ -53,7 +53,7 @@
                 </div>
             </form>
 
-            <nav class="menu-global">
+            <nav class="menu-global" aria-label="Global navigation">
                 <ul>
                     <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
                     <li><a href="https://www.uq.edu.au/news/">News</a></li>
