Increase gap between column

--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -61,7 +61,7 @@
     &__row {
         display: grid;
         grid: auto-flow / 1fr;
-        gap: 1.5rem;
+        gap: 1rem 3rem;
         justify-items: stretch;
         justify-content: stretch;
         align-items: start;
