header toggle button name change for accessibility

--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -17,7 +17,7 @@
                     <li><a href="https://giving.uq.edu.au/">Give now</a></li>
                     <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
                     <li class="menu-global__search-toggle">
-                        <button class="search-toggle__button">Search</button>
+                        <button class="search-toggle__button">Toggle Search</button>
                     </li>
                 </ul>
             </nav>
