Accessibility sorted for Global Header & Site Nav

--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -28,7 +28,7 @@
                     <legend class="hidden">
                         <span class="nav-search__title">What are you looking for?</span>
                     </legend>
-                    <span class="nav-search__title">What are you looking for?</span>
+                    <span class="nav-search__title" tabindex="0">What are you looking for?</span>
                     <div class="nav-search__scope">
                         <div class="nav-search__scope__radio-wrapper">
                             <div class="form-item">
