--- a/packages/storybook-html/src/components/site-header/site-header.html
+++ b/packages/storybook-html/src/components/site-header/site-header.html
@@ -13,7 +13,7 @@
 
   <!-- Navigation Menu  -->
   <div class="uq-site-header__navigation-container">
-    <nav class="uq-site-header__navigation" aria-label="Main navigation" id="jsNav">
+    <nav class="uq-site-header__navigation" aria-label="Site navigation" id="jsNav">
       <ul class="uq-site-header__navigation__list
                  uq-site-header__navigation__list--level-1">
         <li class="uq-site-header__navigation__list-item
@@ -22,7 +22,7 @@
           <a href="/study" aria-haspopup="true" aria-expanded="false">Study</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list
-                     uq-site-header__navigation__list--level-2" aria-label="Study">
+                     uq-site-header__navigation__list--level-2" aria-label="Study submenu">
             <li class="uq-site-header__navigation__list-item">
               <a href="/study/programs">Find a program</a>
             </li>
@@ -67,7 +67,7 @@
           <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2" aria-label="Admissions">
+                     uq-site-header__navigation__list--level-2" aria-label="Admissions submenu">
             <li class="uq-site-header__navigation__list-item">
               <a href="/admissions/undergraduate">Undergraduate</a>
             </li>
@@ -99,7 +99,7 @@
           <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2" aria-label="University life">
+                     uq-site-header__navigation__list--level-2" aria-label="University life submenu">
             <li class="uq-site-header__navigation__list-item">
               <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
             </li>
