Header global search accessibility sorted

--- a/packages/storybook-html/src/components/header/header_no-local-search.html
+++ b/packages/storybook-html/src/components/header/header_no-local-search.html
@@ -17,7 +17,7 @@
                     <li><a href="https://giving.uq.edu.au/">Give now</a></li>
                     <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
                     <li class="menu-global__search-toggle">
-                        <button class="search-toggle__button">Search</button>
+                        <button class="search-toggle__button">Toggle Search</button>
                     </li>
                 </ul>
             </nav>
@@ -28,8 +28,8 @@
                     <legend class="hidden">
                         <span class="nav-search__title">What are you looking for?</span>
                     </legend>
-                    <span class="nav-search__title">What are you looking for?</span>
-                    <div class="nav-search__scope">Search all UQ websites</div>
+                    <span class="nav-search__title" tabindex="0">What are you looking for?</span>
+                    <div class="nav-search__scope" tabindex="0">Search all UQ websites</div>
                 </fieldset>
                 <div class="nav-search__query">
                     <span class="search-query__wrapper">
