--- a/packages/storybook-html/.storybook/custom/components/Toc.scss
+++ b/packages/storybook-html/.storybook/custom/components/Toc.scss
@@ -4,7 +4,7 @@
 // tocbot style overrides
 .uqds-toc {
   box-sizing: border-box;
-  background-color: transparent; //core.$uq-white;
+  background-color: core.$uq-white;
   padding: core.$space-lg core.$space-none core.$space-none core.$space-none;
   margin-bottom: core.$space;
 
