--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -127,8 +127,7 @@
               <a href="/study/medicine">Medicine</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/science-mathematics"
-                >Science and Mathematics</a>
+              <a href="/study/science-mathematics">Science and Mathematics</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
               <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
@@ -188,13 +187,13 @@
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/events" aria-expanded="false">Events</a>
+          <a href="/events">Events</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/stories" aria-expanded="false">Stories</a>
+          <a href="/stories">Stories</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/contact-us" aria-expanded="false">Contact</a>
+          <a href="/contact-us">Contact</a>
         </li>
       </ul>
     </nav>
