--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -73,6 +73,7 @@
                         text-indent: -100vw;
                         overflow: hidden;
                         position: relative;
+                        cursor: pointer;
                         &::before {
                             content: "";
                             position: absolute;
