--- a/packages/storybook-html/src/components/header/header_no-local-search.html
+++ b/packages/storybook-html/src/components/header/header_no-local-search.html
@@ -7,7 +7,7 @@
             </div>
             <nav class="menu-global">
                 <ul>
-                    <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                    <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
                     <li><a href="https://future-students.uq.edu.au/">Study</a></li>
                     <li><a href="https://maps.uq.edu.au/">Maps</a></li>
                     <li><a href="https://www.uq.edu.au/news/">News</a></li>
@@ -44,7 +44,7 @@
 
             <nav class="menu-global">
                 <ul>
-                    <li><a href="https://www.uq.edu.au/contacts/">Contacts</a></li>
+                    <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
                     <li><a href="https://www.uq.edu.au/news/">News</a></li>
                     <li><a href="https://www.library.uq.edu.au/">Library</a></li>
                     <li><a href="https://future-students.uq.edu.au/">Study</a></li>
