--- a/packages/storybook-html/src/components/table/table-card.html
+++ b/packages/storybook-html/src/components/table/table-card.html
@@ -1,4 +1,4 @@
-<h3>Table - Card</h3>
+<!-- <h3>Table - Card</h3> -->
 <table class="uq-table uq-table--card">
     <caption>Types of food and ratings</caption>
     <thead>
