--- a/packages/storybook-html/src/components/table/table-multiple-headers.html
+++ b/packages/storybook-html/src/components/table/table-multiple-headers.html
@@ -1,4 +1,4 @@
-<h3>Table - Multiple Headers</h3>
+<!-- Table - Multiple Headers -->
 <div class="uq-table__wrapper">
     <table class="uq-table">
         <caption>Types of food and ratings</caption>
