Accessibility section review amends in Table comp

--- a/packages/storybook-html/src/components/table/table-irregular-headers.html
+++ b/packages/storybook-html/src/components/table/table-irregular-headers.html
@@ -1,4 +1,4 @@
-<h3>Table - Irregular Headers</h3>
+<!-- Table scroll - Irregular headers -->
 <div class="uq-table__wrapper">
     <table class="uq-table">
         <caption>Types of food and ratings</caption>
