--- a/packages/storybook-html/src/components/table/table-multi-level-headers.html
+++ b/packages/storybook-html/src/components/table/table-multi-level-headers.html
@@ -1,4 +1,4 @@
-<h3>Table - Multi-Level Headers</h3>
+<!-- Table scroll - Multi-level headers -->
 <div class="uq-table__wrapper">
     <table class="uq-table">
         <caption>Types of food and ratings</caption>
