--- a/packages/storybook-html/src/components/table/table-with-classes.html
+++ b/packages/storybook-html/src/components/table/table-with-classes.html
@@ -1,4 +1,4 @@
-<!-- <h3>Table - Basic tags with classes</h3> -->
+<!-- Table scroll - Basic tags with classes -->
 <div class="uq-table__wrapper">
   <table class="uq-table">
       <caption class="uq-table__caption">Types of food and ratings</caption>
