--- a/packages/storybook-html/src/components/table/table.html
+++ b/packages/storybook-html/src/components/table/table.html
@@ -1,4 +1,4 @@
-<!-- <h3>Table - Basic tags with minimal classes</h3> -->
+<!-- Table scroll - Basic tags with minimal classes -->
 <div class="uq-table__wrapper">
     <table class="uq-table">
         <caption>Types of food and ratings</caption>
