form, header: make header form elems consistent w/ forms pkg
The also handles unstyled form elements of the header that would otherwise look different on different base styles.

--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -246,10 +246,12 @@ $use-encapsulation: false !default;
   input[type="radio"],
   input[type="checkbox"] {
     appearance: none;
+    display: inline-block;
     border: $form-checkbox-border-width solid $form-border-color;
     cursor: pointer;
     height: $form-checkbox-size;
     width: $form-checkbox-size;
+    vertical-align: top;
 
     &:focus {
       border-color: $form-focus-color;
