storybook-html: fix password reset example regression and moved

--- a/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
@@ -108,7 +108,7 @@
   }
 }
 
-.form__inline-error-message {
+.inline-error-message {
   + .story-password-strength-meter {
     margin-top: -.5rem;
   }
