Fixed section header purple on dark tinted bg

--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -144,7 +144,7 @@
 
   // section with palettes
   &--light-text {
-    .section__header, .section__summary, .section__footer {
+    .section__header, .section__title, .section__summary, .section__footer {
       @extend %light-palette;
     }
   }
