WIP: grid: container class

--- a/packages/grid/src/scss/_component.scss
+++ b/packages/grid/src/scss/_component.scss
@@ -1,6 +1,11 @@
 @use "@uqds/core/src/scss/global" as core;
 @use 'global' as *;
 
+.uq-layout-container {
+  @include layout-containment;
+  @include grid-col-padding;
+}
+
 /**
  * Grid container (incl. full width modifier class)
  */
