form, header: update radio button and checkbox styles

--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -28,5 +28,5 @@
   $form-checkbox-button-text-active: core.$uq-white;
   $form-checkbox-button-text: core.$brand-text;
   $form-checkbox-check-color: core.$uq-white;
-  $form-checkbox-check-size: 16px;
   $form-checkbox-size: 24px;
+  $form-checkbox-check-size: $form-checkbox-size;
