--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -281,11 +281,11 @@ $use-encapsulation: false !default;
     }
 
     &:checked {
-      border-color: $form-focus-color;
+      border-color: core.$grey-60;
 
       &:focus {
-        border-color: darken($form-focus-color, 15%);
-        box-shadow: 0 0 0 1px darken($form-focus-color, 15%);
+        border-color: $form-focus-color;
+        box-shadow: 0 0 0 1px $form-focus-color;
       }
     }
 
@@ -328,12 +328,12 @@ $use-encapsulation: false !default;
       background-position: center center;
       top: -1px;
       left: -1px;
-      height: $form-checkbox-size;
-      width: $form-checkbox-size;
+      height: $form-checkbox-check-size;
+      width: $form-checkbox-check-size;
     }
 
     &:checked {
-      background-color: $form-focus-color;
+      background-color: core.$grey-60;
 
       &::after {
         background-image: url(get-icon("form-checkbox-check", $form-checkbox-check-color));
@@ -349,14 +349,31 @@ $use-encapsulation: false !default;
   
   input[type="radio"] {
     border-radius: 50%;
+    position: relative;
   
     &:checked {
-      border-width: 4px;
+      border-width: 2px;
+
+      &::after {
+        border-radius: 50%;
+        background-color: core.$grey-60;
+        content: "";
+        display: block;
+        position: absolute;
+        top: 3px;
+        left: 3px;
+        height: $form-checkbox-size - 10px;
+        width: $form-checkbox-size - 10px;
+      }
     }
 
     &.input--error {
       &:checked {
         border-color: $form-color-error;
+
+        &::after {
+          background-color: $form-color-error;
+        }
       }
     }
   }
