--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -5,7 +5,7 @@
   $form-border-radius: 2px;
   $form-border-width: 1px;
   $form-color-error: core.$alert;
-  $form-color-success: darken(core.$green, 10%);
+  $form-color-success: core.$success;
   $form-description-size: core.$font-size-xs;
   $form-element-height: core.$space-xl;
   $form-focus-color: core.$blue;
