--- a/packages/storybook-html/src/components/core/_colour.scss
+++ b/packages/storybook-html/src/components/core/_colour.scss
@@ -142,6 +142,11 @@
     background-color: $uq-red-dark40;
   }
 
+  /* Green shades */
+  .uqds-green-dark10 {
+    background-color: $uq-green-dark10;
+  }
+
   /* Links */
   .uqds-link-color{
     background-color: $link-color;
