Style & markup tidy up. Add documentation

--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -16,65 +16,56 @@
   }
 
   &__title {
-    color: core.$uq-purple;
-    display: block;
-    font-size: $title-font-size;
-    font-weight: $title-font-weight;
     margin: core.$space-none;
     padding: core.$space core.$space-md;
-    text-decoration: none;
-  
-    &:hover,
-    &:focus {
+
+    &-link {
+      font-size: core.$font-size-xl;
       color: core.$uq-purple;
-      text-decoration: underline;
+      text-decoration: none;
+
+      &:hover,
+      &:focus {
+        color: core.$uq-purple;
+        text-decoration: underline;
+      }
     }
   }
     
   &__list {
+    border-top: 1px solid $sidenav-list-item-divider;
+    display: block;
     list-style-type: none;
-    margin-bottom: core.$space-none;
-    margin-top: core.$space-none;
-    padding-left: core.$space-none;
-
-    &--level-1 {
-      display: block;
-      border-top: 1px solid $nav-dropdown-divider;
-
-      > li {
-        border-bottom: 1px solid $nav-dropdown-divider;
-        display: block;
-      }
-    }
+    margin: core.$space-none;
+    padding: core.$space-none;
 
     &--level-2 {
-      display: block;
-      background-color: $nav-dropdown-bg;
+      background-color: $sidenav-list-item-bg;
 
-      > li {
-        border-bottom: 1px solid $nav-dropdown-divider;
+      .uq-side-nav__list-item {
 
         &:last-child {
           border-bottom: none;
         }
       }
 
-      a {
-        padding: core.$space core.$space-xl !important;
+      .uq-side-nav__link {
+        padding: core.$space core.$space-xxl !important;
   
         &:hover,
         &:focus {
-          background-color: $nav-dropdown-active-bg;
+          background-color: $sidenav-list-item-active-bg;
         }
       }
     }
 
     &-item {
-      margin-bottom: core.$space-none;
+      border-bottom: 1px solid $sidenav-list-item-divider;
+      display: block;
+      margin: core.$space-none;
       padding: core.$space-none;
-      position: relative;
 
-      > a {
+      .uq-side-nav__link {
         display: block;
         padding: core.$space core.$space-md;
         color: core.$text;
@@ -86,41 +77,19 @@
         }
       }
 
-      &--has-subnav {
-        > a {
-          @media #{core.$screen-lg-up} {
-            padding-right: core.$space-xl;
-            background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%2351247A'%3E%3Cpath d='M14.285 5.145l-6 6.167a.41.41 0 01-.598 0L1.715 5.145' fill='none' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-            background-position: right 1.3rem center;
-            background-size: 0.6rem;
-            background-repeat: no-repeat;
-          }
-        }
-      }
-
       &--active {
-        > a {
-          border-left: 2px solid core.$uq-purple;
+        .uq-side-nav__link {
+          background-color: $sidenav-list-item-bg;
         }
       }
 
       .uq-side-nav__list-item {
         &--active {
-          > a {
-            border-left: none;
+          .uq-side-nav__link {
             font-weight: core.$font-weight-medium;
-            text-decoration: underline;
           }
         }
       }
     }
-  }
-
-  @media #{core.$screen-lg-up} {
-    margin: core.$space-none calc(#{nth(grid.$schema-md, 2) / 2} - #{core.$space-md});
-  }
-
-  @media #{core.$screen-xl-up} {
-    margin: core.$space-none calc(#{nth(grid.$schema-xl, 2) / 2} - #{core.$space-md});
   }
 }
