--- a/packages/storybook-html/src/components/side-nav/side-nav.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav.html
@@ -1,29 +1,24 @@
+<!-- Side nav single-level -->
 <div class="uq-side-nav">
 
   <!-- Side nav title -->
-  <a href="/" class="uq-side-nav__title">Side nav title</a>
+  <h3 class="uq-side-nav__title">
+    <a href="#" class="uq-side-nav__title-link">Side nav title</a>
+  </h3>
 
   <!-- Side nav -->
   <nav class="uq-side-nav__container" aria-label="Side navigation">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
-      <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active">
-        <a href="/" aria-haspopup="true" aria-expanded="true">Sidenav list1</a>
-        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Sidenav list1 submenu">
-          <li class="uq-side-nav__list-item">
-            <a href="/">Sidenav list1 submenu1</a>
-          </li>
-          <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
-            <a href="/">Sidenav list1 submenu2</a>
-          </li>
-        </ul>
+      <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
+        <a href="#" class="uq-side-nav__link">Sidenav list1</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="/">Sidenav list2</a>
+        <a href="#" class="uq-side-nav__link">Sidenav list2</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="/">Sidenav list3</a>
+        <a href="#" class="uq-side-nav__link">Sidenav list3</a>
       </li>
     </ul>
   </nav>
-
+  
 </div>
