--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -19,6 +19,7 @@
 @use 'lists/src/scss/component' as lists;
 @use 'pane/src/scss/component' as pane;
 @use 'sections/src/scss/component' as sections;
+@use 'side-nav/src/scss/component' as side-nav;
 @use 'site-header/src/scss/component' as site-header;
 @use 'table/src/scss/component' as table;
 @use 'tabs/src/scss/component' as tabs;
