--- a/packages/storybook-html/src/components/side-nav/side-nav.html
+++ b/packages/storybook-html/src/components/side-nav/side-nav.html
@@ -1,22 +1,22 @@
 <!-- Side nav single-level -->
 <div class="uq-side-nav">
 
-  <!-- Side nav title -->
+  <!-- Parent page title -->
   <h3 class="uq-side-nav__title">
-    <a href="#" class="uq-side-nav__title-link">Side nav title</a>
+    <a href="#" class="uq-side-nav__title-link">Parent page title</a>
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation">
+  <nav class="uq-side-nav__container" aria-label="Side navigation" id="jsSideNav">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
-        <a href="#" class="uq-side-nav__link">Side nav list1</a>
+        <a href="#" class="uq-side-nav__link">Sibling list1</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Side nav list2</a>
+        <a href="#" class="uq-side-nav__link">Sibling list2</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Side nav list3</a>
+        <a href="#" class="uq-side-nav__link">Sibling list3</a>
       </li>
     </ul>
   </nav>
