--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -41,6 +41,14 @@
 
     &--level-2 {
       background-color: $sidenav-list-item-bg;
+      display: block;
+      visibility: hidden;
+      position: relative;
+      height: 0;
+      left: 0;
+      width: 100%;
+      opacity: 0;
+      transform: translateY(-($sidenav-list-item-animation-distance));
 
       .uq-side-nav__list-item {
 
@@ -64,6 +72,7 @@
       display: block;
       margin: core.$space-none;
       padding: core.$space-none;
+      position: relative;
 
       .uq-side-nav__link {
         display: block;
@@ -77,12 +86,6 @@
         }
       }
 
-      &--active {
-        .uq-side-nav__link {
-          background-color: $sidenav-list-item-bg;
-        }
-      }
-
       .uq-side-nav__list-item {
         &--active {
           .uq-side-nav__link {
@@ -90,6 +93,42 @@
           }
         }
       }
+
+      &__sub-toggle {
+        position: absolute;
+        top: 0;
+        right: 0;
+        display: block;
+        width: 3rem;
+        padding: core.$space core.$space-md;
+        border-left: 1px solid $sidenav-list-item-divider;
+        text-indent: -100vw;
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%2351247A'%3E%3Cpath d='M14.285 5.145l-6 6.167a.41.41 0 01-.598 0L1.715 5.145' fill='none' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+        background-position: center center;
+        background-repeat: no-repeat;
+        overflow: hidden;
+      }
+
+      &--open {
+        .uq-side-nav__list-item__sub-toggle {
+          background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' stroke='%2351247A'%3E%3Cpath d='M1.715 10.855l6-6.168a.41.41 0 01.597 0l5.973 6.168' fill='none' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+        }
+
+        .uq-side-nav__list--level-2 {
+          opacity: 1;
+          height: auto;
+          visibility: visible;
+          transform: translateY(0);
+          z-index: 20;
+        }
+      }
+
+      &--active {
+        .uq-side-nav__link {
+          background-color: $sidenav-list-item-bg;
+        }
+      }
+
     }
   }
 }
