--- a/packages/side-nav/src/scss/_global.scss
+++ b/packages/side-nav/src/scss/_global.scss
@@ -4,3 +4,5 @@ $sidenav-list-item-bg: core.$grey-05; /* #F1F1F1 */
 $sidenav-list-item-active-bg: core.$grey-10; /* #E2E2E2 */
 $sidenav-list-item-divider: core.$grey-10; /* #E2E2E2 */
 
+$sidenav-list-item-animation-distance: core.$space-sm;
+
